--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -10,12 +10,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      actions: write
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v5
       with:
         python-version: '3.9'
 
@@ -52,31 +56,43 @@ jobs:
 
     - name: Prepare buildozer.spec
       run: |
-        cp buildozer.spec.example buildozer.spec
-        sed -i 's/requirements = python3,kivy/requirements = python3,kivy,innertube,requests/' buildozer.spec
+        cp buildozer.spec buildozer.spec.backup
+        sed -i 's/requirements = .*/requirements = python3,kivy,innertube,requests/' buildozer.spec
         sed -i 's/android.permissions =/android.permissions = INTERNET/' buildozer.spec
 
     - name: Build APK
       run: |
-        buildozer android debug
+        buildozer android debug || echo "Build failed"
 
     - name: Create Release Folder
       run: |
         mkdir -p release/apks
-        cp bin/*.apk release/apks/
-        ls release/apks/
+        cp bin/*.apk release/apks/ || echo "No APK found"
+        ls -la release/apks/
 
-    - name: Upload APK
-      uses: actions/upload-artifact@v3
+    - name: Upload APK Artifact
+      uses: actions/upload-artifact@v4
       with:
         name: ytify-apk
         path: release/apks/
         retention-days: 30
 
     - name: Create GitHub Release
-      uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@v2
       if: startsWith(github.ref, 'refs/tags/')
       with:
         files: release/apks/*.apk
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Debug Information
+      if: failure()
+      run: |
+        echo "Build directory contents:"
+        ls -la
+        echo "Buildozer spec contents:"
+        cat buildozer.spec
+        echo "Python version:"
+        python --version
+        echo "Pip list:"
+        pip list
