--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -38,12 +38,15 @@ jobs:
           zlib1g-dev \
           libncurses5-dev \
           libncursesw5-dev \
-          libtinfo5 \
-          cmake
+          libtinfo6 \
+          cmake \
+          libssl-dev \
+          libffi-dev
 
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install --upgrade setuptools
         pip install buildozer cython
         pip install kivy innertube requests
 
@@ -59,6 +62,12 @@ jobs:
         cp buildozer.spec buildozer.spec.backup
         sed -i 's/requirements = .*/requirements = python3,kivy,innertube,requests/' buildozer.spec
         sed -i 's/android.permissions =/android.permissions = INTERNET/' buildozer.spec
+
+    - name: Install p4a dependencies
+      run: |
+        pip install python-for-android
+        pip install --upgrade cython
+        pip install "urllib3<2.0"
 
     - name: Build APK
       run: |
@@ -96,3 +105,6 @@ jobs:
         python --version
         echo "Pip list:"
         pip list
+        echo "System information:"
+        uname -a
+        cat /etc/os-release
